--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Build directories
+dist/
+build/
+output/
+
+# Dependency directories
+node_modules/
+
 # Logs
 logs
 *.log
@@ -5,87 +13,23 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Dependency directories
-node_modules/
-
-# Build directories
-dist/
-build/
-
 # Optional npm cache directory
 .npm
-
-# Optional REPL history
-.node_repl_history
 
 # Mac system files
 .DS_Store
 
-# Windows system files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Linux system files
-*~
-
 # IDE and editor directories and files
 .idea/
 .vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-*.user
 
 # Temporary files
 tmp/
 temp/
 *.tmp
 
-# Coverage directory used by tools like Istanbul
-coverage/
-
 # Optional cache files
 .cache/
 
 # Environment variables file
 .env
-
-# Service worker cache
-sw.js
-
-# Other files
-*.log
-
-# Compiled files
-*.out
-*.obj
-*.exe
-
-# Node.js production logs
-pm2.log
-pm2.pid
-
-# ESLint cache
-.eslintcache
-
-# Prettier cache
-.prettiercache
-
-# Parcel-bundler cache (if used)
-.cache/
-
-# Jest cache (if used)
-jest/
-
-# StyledComponents generated classnames (if used)
-sc-*.css
-
-# TypeScript cache (if used)
-tsbuildinfo.json
-
-# Other config files
-*.local
